--- a/Index/css/styles_carousel.css
+++ b/Index/css/styles_carousel.css
@@ -2,8 +2,9 @@
 .carousel
 {
     width: 100%;
+    min-width: 320px;
     overflow: scroll;
-    padding: 0;
+    padding: 5px;
     position: relative;
 }
 
@@ -84,7 +85,6 @@
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
-
 }
 
 .carousel-item__details img
