--- a/css/styles_header.css
+++ b/css/styles_header.css
@@ -3,7 +3,8 @@
 .header
 {
     width: 100%;
-    height: 80px;
+    min-width: 320px;
+    height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -12,6 +13,6 @@
 .header__img
 {
     width: 300px;
-    margin-top: 10px;
-    margin-left: 10px;
+    margin: 0px 10px 10px 10px;
+    padding-top: 40px;
 }
